--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "rock-paper-scissors:build"
+            "browserTarget": "rock-paper-scissors:build",
+            "port": 4800
           },
           "configurations": {
             "production": {
